--- a/client/frontend/src/styles/Table.css
+++ b/client/frontend/src/styles/Table.css
@@ -3,15 +3,15 @@ html, body {
   padding: 0;
   height: 100%;
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
 }
 
 .App {
   width: 100%;
-  height: 100%; 
+  height: 100%;
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
 }
 
@@ -21,17 +21,26 @@ table {
   border-collapse: separate;
   border-spacing: 0;
   box-shadow: 0 2px 3px rgba(0,0,0,0.1);
-  border-radius: 10px; 
+  border-radius: 10px;
   background-color: #59C9A5;
-  border: 2px solid #7E2C5B; 
-  overflow: hidden; 
+  border: 2px solid #7E2C5B;
+  overflow: hidden;
 }
 
 th, td {
   padding: 12px 15px;
   text-align: left;
   color: rgb(0, 0, 0);
-  border-bottom: 1px solid #ddd;
+  border-bottom: none;
+}
+
+.name-input, .cpf-input {
+  min-width: 96px;
+}
+
+input[type="text"], input[type="date"], select {
+  width: 100%;
+  box-sizing: border-box; 
 }
 
 th {
@@ -58,4 +67,8 @@ th {
 .table-button.timeline {
   background-color: lightgray;
   color: black;
+}
+
+.edit-input {
+  min-width: 120px;
 }
