--- a/client/frontend/src/styles/Login.css
+++ b/client/frontend/src/styles/Login.css
@@ -1,4 +1,4 @@
-/* Reset default margins and paddings */
+
 html, body {
     margin: 0;
     padding: 0;
@@ -8,7 +8,6 @@ html, body {
     align-items: center;
   }
   
-  /* Main App styling to center content */
   .App {
     width: 100%;
     height: 100%;
@@ -17,7 +16,6 @@ html, body {
     align-items: center;
   }
   
-  /* General form styling */
   form {
     width: 80%;
     max-width: 400px;
@@ -29,24 +27,21 @@ html, body {
     border-radius: 10px;
   }
   
-  /* Label styling */
   label {
     display: block;
     margin-bottom: .5em;
     color: #000;
   }
   
-  /* Input field styling */
   input[type="text"],
   input[type="password"] {
-    width: calc(100% - 24px); /* Full-width minus padding */
+    width: calc(100% - 24px);
     margin-bottom: 1em;
     padding: .6em;
     border: 1px solid #ddd;
     border-radius: 4px;
   }
   
-  /* Button styling */
   button {
     padding: .6em 1em;
     border: none;
@@ -54,22 +49,14 @@ html, body {
     cursor: pointer;
   }
   
-  /* Login button specific styling */
   button[type="submit"] {
     background-color: #D81E5B;
     color: white;
   }
-  
-  /* Error message styling */
+
   .error-message {
     color: red;
     margin-top: .5em;
   }
   
-  /* Responsive design for smaller screens */
-  @media (max-width: 768px) {
-    form {
-      width: 90%;
-    }
-  }
   
